<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".tabsFragments.RulesetFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/stringTitle_ruleset"
            android:text="@string/stringTitle"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    <EditText
        style="@style/title_ruleset"
        android:id="@+id/title_ruleset"
        android:text="Single (1vs1)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

        <TextView
            android:text="Stocks: 3 stocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Time: 7 mins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Final Smash Meter: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Spirits: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Damage Handicap: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Stage Selection: Anyone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Items: Off and None"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="First to: 1 Win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Stage Morph: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Stage Hazards: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Launch Rate: 1.0x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Underdog Boost: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Pausing: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Score Display: Off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:layout_marginBottom="20dp"/>


        <TextView
            android:id="@+id/time_out"
            android:text="@string/time_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:justificationMode="inter_word"/>

        <EditText
            style="@style/title_ruleset"
            android:id="@+id/miis_title"
            android:text="@string/miis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/miis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <EditText
            style="@style/title_ruleset"
            android:text="Stage List"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="Starter stages are selected before the first game."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/starters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/Battlefield_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/FinalDestination_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/PokemonStadium2_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/SmashVille_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/TownAndCity_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/starterStagesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/counterpicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/HollowBastion_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/Lylat_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/NorthernCave_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/Kalos_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/Lylat_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/SmallBattlefield_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/YoshiStory_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/counterpickStagesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <EditText
            style="@style/title_ruleset"
            android:text="Counterpick Stage Banning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:text="@string/stageBanning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <EditText
            style="@style/title_ruleset"
            android:text="Glitch Clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/glitchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <EditText
            style="@style/title_ruleset"
            android:text="Doubles (2vs2)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:text="All rules for singles apply for doubles."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Team Attack: On"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Teammate Highlight: On"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <TextView
            android:text="Share stock is allowed."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/tournamentSpecificities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.core.widget.NestedScrollView>