<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".SettingsActivity">

<!--    Le LinearLayout assemble les composans de la page ENTIERE à la verticale-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    <!--    Top App Bar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/SettingsScreen_Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="Settings"
                app:titleTextColor="@color/white"
                app:titleCentered="true"
                app:theme="@style/ToolbarColoredBackArrow"
                android:background="@color/grey_light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </com.google.android.material.appbar.MaterialToolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    GENERAL-->
    <TextView
        android:text="@string/general_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbarLayout"/>
<!--        Langues-->
        <TextView
        android:text="@string/languages_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbarLayout"/>
<!--        Thèmes-->
        <TextView
        android:text="@string/theme_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbarLayout"/>
<!--        Feedbacks-->
        <TextView
            android:text="@string/feedback_boutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_appbarLayout"/>
<!--        Rate us-->
        <TextView
            android:text="@string/rate_us_boutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_appbarLayout"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>