<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_dark"
    android:fitsSystemWindows="true"
    tools:context=".tabsFragments.StagesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/stages_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:textColor="@color/white"
        android:layout_gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Stages_ConstraintLayout"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Battlefield_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Battlefield_stage"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/Stages_ConstraintLayout"
            app:layout_constraintTop_toTopOf="@id/Stages_ConstraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/Stages_ConstraintLayout"/>
        <ImageView
            android:id="@+id/Battlefield_ImageView"
            android:background="@drawable/battlefield"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="@id/Stages_ConstraintLayout"
            app:layout_constraintTop_toTopOf="@id/Stages_ConstraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/Stages_ConstraintLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/FinalDestination_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FinalDestination_stage"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/FinalDestination_ImageView"
            android:background="@drawable/finale_destination"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/HollowBastion_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HollowBastion_stage"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/HollowBastion_ImageView"
        android:background="@drawable/hollow_bastion"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Kalos_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kalos_stage"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/Kalos_ImageView"
            android:background="@drawable/kalos"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/NorthernCave_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NorthernCave_stage"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/NorthernCave_ImageView"
            android:background="@drawable/northern_cave"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/PokemonStadium2_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PokemonStadium2_stage"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/PokemonStadium2_ImageView"
                android:background="@drawable/pokemon_stadium2"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/Smashville_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SmashVille_stage"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/Smashville_ImageView"
                android:background="@drawable/smashville"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/SmallBattlefield_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SmallBattlefield_stage"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/SmallBattlefield_ImageView"
                android:background="@drawable/small_battlefield"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/TownAndCity_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TownAndCity_stage"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/TownAndCity_ImageView"
                android:background="@drawable/town_and_city"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/YoshiStory_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YoshiStory_stage"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/YoshiStory_ImageView"
                android:background="@drawable/yoshi_story"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>